cis 2.1/github/1-6599740401/f5-cluster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec: 
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      app: k8s-bigip-ctlr
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template: 
    metadata: 
      annotations: 
        seccomp.security.alpha.kubernetes.io/defaultProfileName: unconfined
        seccomp.security.alpha.kubernetes.io/pod: unconfined
      creationTimestamp: ~
      labels: 
        app: k8s-bigip-ctlr
      name: k8s-bigip-ctlr
    spec: 
      containers: 
        - 
          args: 
            - "--bigip-username=$(BIGIP_USERNAME)"
            - "--bigip-password=$(BIGIP_PASSWORD)"
            - "--bigip-url=192.168.200.92"
            - "--bigip-partition=k8s"
            - "--namespace=default"
            - "--pool-member-type=cluster"
            - "--flannel-name=fl-vxlan"
            - "--log-level=DEBUG"
            - "--log-as3-response=true"
            - "--insecure=true"
            - "--manage-ingress=true"
            - "--as3-validation=true"
          command: 
            - /app/bin/k8s-bigip-ctlr
          livenessProbe:
            failureThreshold: 3
            httpGet:
                path: /health
                port: 8080
                scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          readinessProbe:
            failureThreshold: 3
            httpGet:
                path: /health
                port: 8080
                scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15
          image: "abhishekf5/k8s-bigip-ctlr:2.1.1_draft_02"
          name: f5-server
      serviceAccountName: k8s-bigip-ctlr
