cis 2.1/github/1-6599740401/ingress-https.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    virtual-server.f5.com/ip: 10.192.75.108
  name: kube-apiserver
  namespace: default
spec:
  backend:
    serviceName: kubernetes
    servicePort: 443
